Fix tinymce modal height on mobile

--- a/css/wpinsertpages.css
+++ b/css/wpinsertpages.css
@@ -331,7 +331,7 @@
 	}
 
 	#wp-insertpage-wrap.options-panel-visible {
-		height: 575px;
+		height: 630px;
 	}
 
 	#wp-insertpage-wrap .query-results {
@@ -377,7 +377,7 @@
 	}
 
 	#wp-insertpage-wrap.options-panel-visible {
-		height: 575px;
+		height: 630px;
 	}
 }
 
